# azure-codex-proxy

./: .gitignore  AGENTS.md  README.md  codex-azure  main.py  pyproject.toml
.github/workflows/: ci.yml
codex_azure/: __init__.py  app.py  cli.py  config.py  platform.py  server.py
tests/: conftest.py  test_cli.py  test_platform.py  test_security.py
