[project]
name = "azure-codex-proxy"
dynamic = ["version"]
description = "Proxy service that refreshes Azure tokens for codex-cli"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity",
    "azure-cli>=2.84.0b1",
    "fastapi",
    "httpx>=0.28.1,<0.29a0",
    "platformdirs",
    "tomlkit",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
codex-azure = "codex_azure.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.version.raw-options]
tag_regex = "^(?:v)?(?P<version>.+)$"
version_scheme = "no-guess-dev"

[tool.hatch.build.hooks.vcs]
version-file = "codex_azure/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["codex_azure"]
